fixed nickname vertical-align error in chrome

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -545,6 +545,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     word-break: keep-all;
+    vertical-align: bottom;
   }
 }
 
